1.fix last seen to be more readable for human. 2.Fix social media icon to be more appealing. ie: if user not set their social media, the icon is just an image,else it will turn to gif.

--- a/home.css
+++ b/home.css
@@ -155,3 +155,6 @@ a.logoutBtn {
 	font-weight: 700;
 }
 
+.default {
+	cursor: default;
+}
